--- a/testEditeur.html
+++ b/testEditeur.html
@@ -49,7 +49,8 @@
 		<script type="text/javascript" src="controleur/Mur.js"></script> 
 		<script type="text/javascript" src="controleur/Clavier.js"></script> 
 		<script type="text/javascript" src="utils/clone.js"></script>		
-		<script src="testEditeur.js"></script>
+		<script type="text/javascript" src="controleur/Editeur.js"></script> 
+		<script type="text/javascript" src="game.js"></script> 
 	  </body>
 	  
 	</html>
